[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/MapSupport/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/ButtonGroups/TerrainTransform.tres" type="ButtonGroup" id=2]
[ext_resource path="res://Scenes/UI/ButtonGroups/DistrictBuilder.tres" type="ButtonGroup" id=3]
[ext_resource path="res://Scenes/Main/UI.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Main/MapBuilder.gd" type="Script" id=5]

[node name="MapBuilder" type="Node"]
script = ExtResource( 5 )
highlight_neighbors = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )
terrain_tools = ExtResource( 2 )
district_builder_tools = ExtResource( 3 )

[node name="HUD" type="Control" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MapTools" type="VBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 200
alignment = 1

[node name="TerrainTransform" type="VBoxContainer" parent="UI/HUD/MapTools"]
margin_left = 50.0
margin_top = 91.0
margin_right = 250.0
margin_bottom = 391.0
rect_min_size = Vector2( 200, 300 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="UI/HUD/MapTools/TerrainTransform"]
margin_top = 11.0
margin_right = 200.0
margin_bottom = 25.0
text = "Terrain Transform Tools"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="UI/HUD/MapTools/TerrainTransform"]
margin_top = 45.0
margin_right = 200.0
margin_bottom = 49.0

[node name="plain" type="Button" parent="UI/HUD/MapTools/TerrainTransform"]
margin_top = 69.0
margin_right = 200.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 2 )
text = "Plain"

[node name="ocean" type="Button" parent="UI/HUD/MapTools/TerrainTransform"]
margin_top = 129.0
margin_right = 200.0
margin_bottom = 169.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 2 )
text = "Ocean"

[node name="mountain" type="Button" parent="UI/HUD/MapTools/TerrainTransform"]
margin_top = 189.0
margin_right = 200.0
margin_bottom = 229.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 2 )
text = "Mountain"

[node name="forest" type="Button" parent="UI/HUD/MapTools/TerrainTransform"]
margin_top = 249.0
margin_right = 200.0
margin_bottom = 289.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 2 )
text = "Forest"

[node name="DistrictBuilder" type="VBoxContainer" parent="UI/HUD/MapTools"]
margin_left = 50.0
margin_top = 591.0
margin_right = 250.0
margin_bottom = 989.0
rect_min_size = Vector2( 200, 300 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="UI/HUD/MapTools/DistrictBuilder"]
margin_right = 200.0
margin_bottom = 14.0
text = "District Builder"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="UI/HUD/MapTools/DistrictBuilder"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 38.0

[node name="rural_low" type="Button" parent="UI/HUD/MapTools/DistrictBuilder"]
margin_top = 58.0
margin_right = 200.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 3 )
text = "Rural Low"

[node name="rural_medium" type="Button" parent="UI/HUD/MapTools/DistrictBuilder"]
margin_top = 118.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 3 )
text = "Rural Medium"

[node name="urban_medium" type="Button" parent="UI/HUD/MapTools/DistrictBuilder"]
margin_top = 178.0
margin_right = 200.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 3 )
text = "Urban Medium"

[node name="urban_high" type="Button" parent="UI/HUD/MapTools/DistrictBuilder"]
margin_top = 238.0
margin_right = 200.0
margin_bottom = 278.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 3 )
text = "Urban High"

[node name="agricultural" type="Button" parent="UI/HUD/MapTools/DistrictBuilder"]
margin_top = 298.0
margin_right = 200.0
margin_bottom = 338.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 3 )
text = "Agricultural"

[node name="industrial" type="Button" parent="UI/HUD/MapTools/DistrictBuilder"]
margin_top = 358.0
margin_right = 200.0
margin_bottom = 398.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
group = ExtResource( 3 )
text = "Industrial"

[node name="ModeDebugger" type="HBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -29.0
margin_right = 192.0
margin_bottom = -10.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 40

[node name="Mode" type="Label" parent="UI/ModeDebugger"]
margin_top = 2.0
margin_right = 74.0
margin_bottom = 16.0
text = "Mode: View"

[node name="VSeparator" type="VSeparator" parent="UI/ModeDebugger"]
margin_left = 114.0
margin_right = 118.0
margin_bottom = 19.0

[node name="Type" type="Label" parent="UI/ModeDebugger"]
margin_left = 158.0
margin_top = 2.0
margin_right = 196.0
margin_bottom = 16.0
text = "Type: "

[node name="VSeparator2" type="VSeparator" parent="UI/ModeDebugger"]
margin_left = 236.0
margin_right = 240.0
margin_bottom = 19.0

[node name="PaintingIndicator" type="Label" parent="UI/ModeDebugger"]
margin_left = 280.0
margin_top = 2.0
margin_right = 280.0
margin_bottom = 16.0

[node name="TileDetails" type="VBoxContainer" parent="UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
grow_vertical = 2
rect_min_size = Vector2( 200, 200 )
custom_constants/separation = 20
alignment = 1

[node name="Type" type="Label" parent="UI/TileDetails"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 56.0
text = "Terrain Type:"

[node name="CubeCoord" type="Label" parent="UI/TileDetails"]
margin_top = 76.0
margin_right = 200.0
margin_bottom = 90.0
text = "Cube Coordinate:"

[node name="CartesianCoord" type="Label" parent="UI/TileDetails"]
margin_top = 110.0
margin_right = 200.0
margin_bottom = 124.0
text = "Cartesian Coordinate:"

[node name="Neighbors" type="Label" parent="UI/TileDetails"]
margin_top = 144.0
margin_right = 200.0
margin_bottom = 158.0
text = "Neighbors:"

[node name="Map" parent="." instance=ExtResource( 1 )]
